--- a/pagina2.html
+++ b/pagina2.html
@@ -9,6 +9,9 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
     crossorigin="anonymous">
     <style>
+        body{
+            background-color: grey;
+        }
         a{
             background-color: deepskyblue;
             color: white;
@@ -18,6 +21,8 @@
             border-bottom-right-radius: 10px;
         }
         a:hover{
+            border-top-left-radius: 0px;
+            border-bottom-right-radius: 0px;
             border-bottom-left-radius: 10px;
             border-top-right-radius: 10px;
         }
